k8s/bots-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bots-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bots
  template:
    metadata:
      labels:
        app: bots
    spec:
      containers:
        - name: bots
          image: ecuationable/bootree-bots
---
apiVersion: v1
kind: Service
metadata:
  name: bots-srv-ci
spec:
  selector:
    app: bots
  ports:
    - name: bots
      protocol: TCP
      port: 3000
      targetPort: 3000
