k8s/bots-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bots-srv-nodeport
spec:
  type: NodePort
  selector:
    app: bots
  ports:
    - name: bots
      protocol: TCP
      port: 3000
      targetPort: 3000
