k8s/users-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-srv-nodeport
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3000
      targetPort: 3000
